--- a/options.html
+++ b/options.html
@@ -177,7 +177,7 @@
 			</table>
 			<div class="ad">
 				<div class="extReview">
-					<span id="extReview1"></span> <a id="webStoreLink" href="https://chrome.google.com/webstore/detail/apkkllhahggfkhfdlmpopcncnaiclfdm/reviews"><span id="webStore"></span></a>.<br>
+					<span id="extReview1"></span> <a id="webStoreLink"><span id="webStore" class="hlink" data-url="https://chrome.google.com/webstore/detail/apkkllhahggfkhfdlmpopcncnaiclfdm/reviews"></span></a>.<br>
 					<span id="extReview2"></span>.
 				</div>
 			</div>
@@ -263,7 +263,7 @@
 		<div class="decorator"></div>		
 		<button id="save" class="cupid-green"></button>   <button id="reset" class="cupid-beige"></button>
 		<br>
-		<div class="extVersion">© <a href="https://azbyka.ru/extension"><span id="extCopyright"></span></a> <span id="extVersion"></span></div>
+		<div class="extVersion">© <a><span id="extCopyright" class="hlink" data-url="https://azbyka.ru/extension"></span></a> <span id="extVersion"></span></div>
 		<div id="saveResult" class="saveResult"></div>
 	</div>
 </div>
